fixed alignment issues

--- a/src/src/Contact.css
+++ b/src/src/Contact.css
@@ -1,19 +1,3 @@
-section.content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 75%;
-}
-
 #fname {
     width: 50%;
 }
