--- a/src/src/Subscribe.css
+++ b/src/src/Subscribe.css
@@ -4,7 +4,7 @@
     width: 40%;
 }
 
-.container {
+#subscribe-container {
     display: flex;
     align-items: center;
     flex-direction: column;
